--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "]"
   },
   "author": "FeliOdras",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "moment": "^2.24.0"
+  }
 }
